log
Thu 28 Mar 2024 02:13:19 PM UTC: 
 tests:  0|6
total_score: 0/70
8350c47
Thu 28 Mar 2024 02:15:06 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1c06217
Thu 28 Mar 2024 02:16:46 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 15/70
6f48b8a
Thu 28 Mar 2024 02:22:44 PM UTC: 
 list.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
800e4fc
Thu 28 Mar 2024 02:23:08 PM UTC: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1f094ba
Thu 28 Mar 2024 02:23:23 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
b413ae7
Thu 28 Mar 2024 02:30:56 PM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
e9f5777
Thu 28 Mar 2024 02:34:03 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d160345
Thu 28 Mar 2024 02:37:03 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|4
total_score: 25/70
d057b29
Thu 28 Mar 2024 02:38:19 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|4
total_score: 25/70
aae187d
Thu 28 Mar 2024 02:39:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
79f1136
Thu 28 Mar 2024 02:39:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
ebd4752
Thu 28 Mar 2024 02:40:33 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
b6b4c05
